src/objects/Sampe_Report_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Actual</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matrix__c</fullName>
        <label>Matrix</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quarterly_Target__c</fullName>
        <label>Quarterly Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Key__c</fullName>
        <label>Report Key</label>
        <picklist>
            <picklistValues>
                <fullName>Quality</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sample Report Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sampe_Report_Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Report Matrices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>